--- a/site/module-2-solution/index.html
+++ b/site/module-2-solution/index.html
@@ -4,25 +4,28 @@
 <meta charset="utf-8">
 <title>Our Menu</title>
 <link href="css/styles.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet" type="text/css">
+
 </head>
 
 <body>
 	<h1>Our Menu</h1>
 
 	<div class="row">
-   <div class="col-lg-4 col-md-6">
+   <div class="col-lg-4 col-md-6 col-sm-12">
       <div class="section">
 		  <p class="title-red">Beef</p>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, molestias, cumque! Odio illum quisquam sint porro exercitationem natus in consectetur blanditiis sunt, dolor aliquam magnam necessitatibus nobis mollitia quo obcaecati!</p>
       </div>
    </div>
-	 <div class="col-lg-4 col-md-6">
+	 <div class="col-lg-4 col-md-6 col-sm-12">
       <div class="section">
          <p class="title-blue">Chicken</p>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, molestias, cumque! Odio illum quisquam sint porro exercitationem natus in consectetur blanditiis sunt, dolor aliquam magnam necessitatibus nobis mollitia quo obcaecati!</p>
       </div>
    </div>
-	 <div class="col-lg-4 col-md-12">
+	 <div class="col-lg-4 col-md-12 col-sm-12">
       <div class="section">
          <p class="title-green">Veggies</p>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, molestias, cumque! Odio illum quisquam sint porro exercitationem natus in consectetur blanditiis sunt, dolor aliquam magnam necessitatibus nobis mollitia quo obcaecati!</p>
