--- a/site/module-3-solution/index.html
+++ b/site/module-3-solution/index.html
@@ -70,7 +70,7 @@
 
 <p>Sed euismod cursus sapien. Vestibulum at malesuada dui. Ut id lectus vel odio dictum dapibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse sodales vitae risus et rutrum. Phasellus turpis risus, pretium ut hendrerit et, ornare eget ligula. Nulla posuere erat vel sem rutrum, vitae volutpat urna mattis. Nulla lobortis diam a egestas malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam hendrerit tortor nec nunc mollis commodo.</p>
 
-<p class="text-center"><a href="#main-content">Back to top</a></p>
+<p class="text-center"><a href="#header-nav">Back to top</a></p>
 </div>
 		
 
@@ -84,7 +84,7 @@
 
 <p>Sed euismod cursus sapien. Vestibulum at malesuada dui. Ut id lectus vel odio dictum dapibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse sodales vitae risus et rutrum. Phasellus turpis risus, pretium ut hendrerit et, ornare eget ligula. Nulla posuere erat vel sem rutrum, vitae volutpat urna mattis. Nulla lobortis diam a egestas malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam hendrerit tortor nec nunc mollis commodo.</p>
 
-<p class="text-center"><a href="#main-content">Back to top</a></p>
+<p class="text-center"><a href="#header-nav">Back to top</a></p>
 </div>
     
 
@@ -99,7 +99,7 @@
 
 <p>Sed euismod cursus sapien. Vestibulum at malesuada dui. Ut id lectus vel odio dictum dapibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse sodales vitae risus et rutrum. Phasellus turpis risus, pretium ut hendrerit et, ornare eget ligula. Nulla posuere erat vel sem rutrum, vitae volutpat urna mattis. Nulla lobortis diam a egestas malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam hendrerit tortor nec nunc mollis commodo.</p>
 
-<p class="text-center"><a href="#main-content">Back to top</a></p>
+<p class="text-center"><a href="#header-nav">Back to top</a></p>
 </div>	
 		
 		
